--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 .menu{
-display: flex;
-flex-direction: row;
-justify-content: flex-start;
-align-items: center;
-width: 1600px;
-height: 75px;
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 97.44%;
-background-color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 1600px;
+    height: 75px;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 97.44%;
+    background-color: black;
 }
 
 .menu_img{
@@ -27,28 +27,28 @@ background-color: black;
     left: 1201px;
 }
 .but_menu1{
-width: 32px;
-height: 23px;
-left: 755.35%;
-right: -675.47%;
-top: 103.45%;
-bottom: -82.76%;
+    width: 32px;
+    height: 23px;
+    left: 755.35%;
+    right: -675.47%;
+    top: 103.45%;
+    bottom: -82.76%;
 }
 .but_menu2{
-width: 29px;
-height: 29px;
-left: 796.23%;
-right: -714.47%;
-top: 89.66%;
-bottom: -89.66%;
+    width: 29px;
+    height: 29px;
+    left: 796.23%;
+    right: -714.47%;
+    top: 89.66%;
+    bottom: -89.66%;
 }
 .but_menu3{
-width: 32px;
-height: 29px;
-left: 4150%;
-right: -4150%;
-top: 89.66%;
-bottom: -89.66%;
+    width: 32px;
+    height: 29px;
+    left: 4150%;
+    right: -4150%;
+    top: 89.66%;
+    bottom: -89.66%;
 }
 .btn1{
     background-color: black;
@@ -61,161 +61,161 @@ bottom: -89.66%;
 }
 .background{
     display: flex;
-width: 1600px;
-height: 768px;
-left: 0%;
-right: 0%;
-top: 75px;
-bottom: 71.32%;
-background: rgb(241, 228, 230);
+    width: 1600px;
+    height: 768px;
+    left: 0%;
+    right: 0%;
+    top: 75px;
+    bottom: 71.32%;
+    background: rgb(241, 228, 230);
 }
 .img_back1{
-width: 800.58px;
-height: 764px;
-left: 0;
-right: 799.42px;
-top: 75px;
-bottom: 2086px;
+    width: 800.58px;
+    height: 764px;
+    left: 0;
+    right: 799.42px;
+    top: 75px;
+    bottom: 2086px;
 }
 .img_back2{
-position: absolute;
-width: 405px;
-height: 93.1px;
-left: 864px;
-right: 331px;
-top: 364.9px;
-bottom: 2467px;
+    position: absolute;
+    width: 405px;
+    height: 93.1px;
+    left: 864px;
+    right: 331px;
+    top: 364.9px;
+    bottom: 2467px;
 }
 
 .women{
-position: absolute;
-width: 360px;
-height: 260px;
-left: 230px;
-right: 550px;
-top: 904px;
-bottom: -694px;
-padding-right: 26px;
+    position: absolute;
+    width: 360px;
+    height: 260px;
+    left: 230px;
+    right: 550px;
+    top: 904px;
+    bottom: -694px;
+    padding-right: 26px;
 }
 .men{
-position: absolute;
-width: 360px;
-height: 260px;
-left: 620px;
-right: 160px;
-top: 904px;
-bottom: -694px;
-padding-right: 26px;
+    position: absolute;
+    width: 360px;
+    height: 260px;
+    left: 620px;
+    right: 160px;
+    top: 904px;
+    bottom: -694px;
+    padding-right: 26px;
 }
 .kid{
-position: absolute;
-width: 360px;
-height: 260px;
-left: 1010px;
-right: -230px;
-top: 904px;
-bottom: -694px;
+    position: absolute;
+    width: 360px;
+    height: 260px;
+    left: 1010px;
+    right: -230px;
+    top: 904px;
+    bottom: -694px;
 }
 .acces{
-position: absolute;
-width: 1140px;
-height: 180px;
-left: 230px;
-right: -230px;
-top: 1194px;
-bottom: -904px;
+    position: absolute;
+    width: 1140px;
+    height: 180px;
+    left: 230px;
+    right: -230px;
+    top: 1194px;
+    bottom: -904px;
 }
 .products{
-position: absolute;
-display: grid;
-grid-template-columns:1fr 1fr 1fr;
-grid-template-rows:1fr 1fr 1fr;
-column-gap: 27px;
+    position: absolute;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr 1fr;
+    column-gap: 27px;
 
 }
 .prod_h3{
-width: 182px;
-height: 36px;
-left: 62.31%;
-right: 21.72%;
-color: rgb(34, 34, 34);
-font-family: "Lato";
-font-size: 30px;
-font-weight: 400;
-line-height: 100px;
-letter-spacing: 0%;
-text-align: left;
+    width: 182px;
+    height: 36px;
+    left: 62.31%;
+    right: 21.72%;
+    color: rgb(34, 34, 34);
+    font-family: "Lato";
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 100px;
+    letter-spacing: 0%;
+    text-align: left;
 }
 .prod_p{
-justify-content: flex-start;
-width: 336px;
-height: 17px;
-left: 55.35%;
-right: 15.18%;
-color: rgb(159, 159, 159);
-font-family: "Lato";
-font-size: 14px;
-font-weight: 400;
-line-height: 5px;
-letter-spacing: 0%;
-text-align: left;
+    justify-content: flex-start;
+    width: 336px;
+    height: 17px;
+    left: 55.35%;
+    right: 15.18%;
+    color: rgb(159, 159, 159);
+    font-family: "Lato";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 5px;
+    letter-spacing: 0%;
+    text-align: left;
 }
 
 .cards1{
-width: 360px;
-height: 587px;
-left: 20.18%;
-right: 48.25%;
-top: 112.97%;
+    width: 360px;
+    height: 587px;
+    left: 20.18%;
+    right: 48.25%;
+    top: 112.97%;
 }
 .cards2{
-width: 360px;
-height: 581px;
-left: 54.39%;
-right: 14.04%;
-top: 113.05%;
-bottom: -54.7%;
+    width: 360px;
+    height: 581px;
+    left: 54.39%;
+    right: 14.04%;
+    top: 113.05%;
+    bottom: -54.7%;
 }
 .cards3{
-width: 360px;
-height: 581px;
-left: 88.6%;
-right: -20.18%;
-top: 113.05%;
-bottom: -54.7%;
+    width: 360px;
+    height: 581px;
+    left: 88.6%;
+    right: -20.18%;
+    top: 113.05%;
+    bottom: -54.7%;
 }
 .cards4{
-width: 360px;
-height: 581px;
-left: 20.18%;
-right: 48.25%;
-top: 156.85%;
-bottom: -98.49%;
+    width: 360px;
+    height: 581px;
+    left: 20.18%;
+    right: 48.25%;
+    top: 156.85%;
+    bottom: -98.49%;
 }
 .cards5{
-width: 360px;
-height: 581px;
-left: 54.39%;
-right: 14.04%;
-top: 156.85%;
-bottom: -98.49%;
+    width: 360px;
+    height: 581px;
+    left: 54.39%;
+    right: 14.04%;
+    top: 156.85%;
+    bottom: -98.49%;
 }
 .cards6{
-width: 360px;
-height: 581px;
-left: 88.6%;
-right: -20.18%;
-top: 156.85%;
-bottom: -98.49%;
+    width: 360px;
+    height: 581px;
+    left: 88.6%;
+    right: -20.18%;
+    top: 156.85%;
+    bottom: -98.49%;
 }
 .all{
-position: absolute;
-width: 1140px;
-height: 1395px;
-left: 230px;
-right: 230px;
-top: 1570px;
-bottom: 60px;
+    position: absolute;
+    width: 1140px;
+    height: 1395px;
+    left: 230px;
+    right: 230px;
+    top: 1570px;
+    bottom: 60px;
 }
 .cards0{
     display: flex;
@@ -224,22 +224,33 @@ bottom: 60px;
     flex-direction: column;
 }
 .pr_img1{
-background: url(Layer4),rgb(247, 228, 226);
+    background: url(Layer4),rgb(247, 228, 226);
 }
 .pr_img2{
-background: rgb(247, 228, 226);
+    background: rgb(247, 228, 226);
+}
+.cards2 .pr_img2_hover{
+    display: none;
+}
+.cards2:hover .pr_img2{
+    display: none;
+}
+.cards2:hover .pr_img2_hover{
+    display: block;
+    opacity: 0.5;
+    background-color: #FF6A6A;
 }
 .pr_img3{
-background: url(Layer46),rgb(243, 238, 239);  
+    background: url(Layer46),rgb(243, 238, 239);  
 }
 .pr_img4{
-background: url(Layer50),rgb(243, 237, 237); 
+    background: url(Layer50),rgb(243, 237, 237); 
 }
 .pr_img5{
-background: url(ofis),rgb(243, 237, 237);
+    background: url(ofis),rgb(243, 237, 237);
 }
 .pr_img6{
-background: url(liudi),rgb(243, 237, 237);   
+    background: url(liudi),rgb(243, 237, 237);   
 }
 .pr_title1{
     width: 360px;
@@ -256,55 +267,55 @@ background: url(liudi),rgb(243, 237, 237);
     left: 636.46px; 
 }
 .pr_title3{
-width: 314.74px;
-height: 116.65px;
-left: 285.13%;
-right: -272.56%;
-top: 347.91%;
-bottom: -267.99%;   
+    width: 314.74px;
+    height: 116.65px;
+    left: 285.13%;
+    right: -272.56%;
+    top: 347.91%;
+    bottom: -267.99%;   
 }
 .pr_title4{
-width: 314.74px;
-height: 116.65px;
-left: 68.46%;
-right: -55.89%;
-top: 453.07%;
-bottom: -373.15%;   
+    width: 314.74px;
+    height: 116.65px;
+    left: 68.46%;
+    right: -55.89%;
+    top: 453.07%;
+    bottom: -373.15%;   
 }
 .pr_title5{
-width: 314.74px;
-height: 116.65px;
-left: 176.79%;
-right: -164.22%;
-top: 453.07%;
-bottom: -373.15%; 
+    width: 314.74px;
+    height: 116.65px;
+    left: 176.79%;
+    right: -164.22%;
+    top: 453.07%;
+    bottom: -373.15%; 
 }
 .pr_title6{
-width: 314.74px;
-height: 116.65px;
-left: 285.13%;
-right: -272.56%;
-top: 453.07%;
-bottom: -373.15%;
+    width: 314.74px;
+    height: 116.65px;
+    left: 285.13%;
+    right: -272.56%;
+    top: 453.07%;
+    bottom: -373.15%;
 }
 .btn_all{
-Width: 212px;
-Height: 48px;
-Top: 2817px;
-Left: 695px;
-color: rgb(242, 99, 118);
-font-family: "Lato";
-font-size: 16px;
-font-weight: 400;
-line-height: 19px;
-letter-spacing: 0%;
-text-align: center;
-background: rgb(255, 255, 255);
-border: 1px solid #FF6A6A;
-justify-content: center;
-align-items: center;
-display: flex;
-margin-left: 123%;
+    Width: 212px;
+    Height: 48px;
+    Top: 2817px;
+    Left: 695px;
+    color: rgb(242, 99, 118);
+    font-family: "Lato";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: center;
+    background: rgb(255, 255, 255);
+    border: 1px solid #FF6A6A;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-left: 123%;
 }
 button.btn_all:hover{
     border: 1px solid rgb(255, 106, 106);
@@ -343,7 +354,7 @@ button.btn_all:hover{
     height: 448px;
     left: 0;
     right: 0;
-    top: 3301px;
+    top: 660%;
     bottom: 79px;
     display: flex;
     justify-content: center;
@@ -352,10 +363,10 @@ button.btn_all:hover{
     background-color: rgba(255, 255, 255, 0.99); 
 }
 .img_down1{
-z-index: 1;
+    z-index: 1;
 }
 .img_down2{
-z-index: 1;
+    z-index: 1;
 }
 .end{
     position: absolute;
@@ -363,19 +374,17 @@ z-index: 1;
     height: 79px;
     left: 0%;
     right: 0%;
-    top: 577.94%;
+    top: 720%;
     bottom: 0%;
     background-color: black;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.img_end1{
 
-}
 img.img_end2:hover{
-background-image: rgb(241, 109, 127);
-border: 1px solid rgb(255, 106, 106);
+    background-image: rgb(241, 109, 127);
+    border: 1px solid rgb(255, 106, 106);
 }
 button.btn3::before{
     position: relative;
@@ -423,27 +432,86 @@ ul, li{
 }
 .dropdown-item{
     color: rgb(241, 109, 127);
-font-family: "Lato";
-font-size: 14px;
-font-weight: 400;
-line-height: 17px;
-letter-spacing: 0%;
-text-align: left;
-width: 55px;
-height: 17px;
-text-decoration: none;
-padding-left: 30px;
-padding-top: 20px;
+    font-family: "Lato";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0%;
+    text-align: left;
+    width: 55px;
+    height: 17px;
+    text-decoration: none;
+    padding-left: 30px;
+    padding-top: 20px;
 }
 li{
-color: rgb(111, 110, 110);
-font-family: "Lato";
-font-size: 14px;
-font-weight: 400;
-line-height: 17px;
-letter-spacing: 0%;
-text-align: left;;
-height: 17px;
+    color: rgb(111, 110, 110);
+    font-family: "Lato";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0%;
+    text-align: left;;
+    height: 17px;
+}
+.card-none{
+    position: absolute;
+    width: 652px;
+    height: 752px;
+    left: 230px;
+    top: 540%;
+    border: 1px solid rgb(234, 234, 234);  
+}
+.img_none1{
+    position: absolute;
+    width: 262px;
+    height: 222px;
+    left: 323px;
+    right: -133px;
+    margin-top: 30px;
+}
+.img_none2{
+    position: absolute;
+    width: 262px;
+    height: 222px;
+    left: 323px;
+    right: -133px;
+    margin-top: 30px;
+}
+.img_close1{
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    left: 600px;
+    right: -31.9%;
+}
+.img_close2{
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    left: 600px;
+    right: -31.9%;
+}
+.card_none1{
+    width: 652px;
+    height: 306px;
+    box-shadow: 17px 19px 24px 0px rgba(0, 0, 0, 0.13);
+}
+.card_none2{
+    width: 652px;
+    height: 306px;
+    margin-top: 54px;
+    box-shadow: 17px 19px 24px 0px rgba(0, 0, 0, 0.13);
+}
+.h2_none{
+    margin-left: 280px;
+    color: rgb(34, 34, 34);
+    font-family: "Lato";
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 36px;
+    width: 137px;
+    height: 36px;
 }
 
 @media (max-width: 768px){
@@ -526,22 +594,22 @@ height: 17px;
         bottom: -371.57px;
     }
     .kid{
-    position: absolute;
-    width: 232.89px;
-    height: 167px;
-    left: 603.11px;
-    right: -16px;
-    top: 507px;
-    bottom: -370.96px;
+        position: absolute;
+        width: 232.89px;
+        height: 167px;
+        left: 603.11px;
+        right: -16px;
+        top: 507px;
+        bottom: -370.96px;
     }
     .acces{
-    position: absolute;
-    width: 734.58px;
-    height: 116.09px;
-    left: 100.36px;
-    right: -14.94px;
-    top: 693.96px;
-    bottom: -507px;
+        position: absolute;
+        width: 734.58px;
+        height: 116.09px;
+        left: 100.36px;
+        right: -14.94px;
+        top: 693.96px;
+        bottom: -507px;
     }
     .prod_h3{
         position: relative;
@@ -616,5 +684,8 @@ height: 17px;
     }
     .dropdown{
         width: 220px;
+    }
+    .card-none{
+        display: none;
     }
 }
